--- a/dotfiles/.config/i3/config
+++ b/dotfiles/.config/i3/config
@@ -216,6 +216,12 @@ bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
+#Screenshot
+# scrot - root
+bindsym Print exec scrot -e 'mv $f /home/apinter/Pictures/Screenshot/'
+# scrot - select window or rectangle
+bindsym Mod1+Print exec scrot -s -e 'mv $f /home/apinter/Pictures/Screenshot/'
+
 #Wallpaper
 exec_always feh --bg-scale $wallpaper
 
